# opentelemetry-demo

./: docker-compose.minimal.yml  pyproject.toml
src/adservice/src/main/java/oteldemo/: AdService.java
src/paymentservice/: charge.js
src/quoteservice/app/: routes.php
src/recommendationservice/: recommendation_server.py
