[tool.poetry]
name = "opentelemetry-demo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
grpcio-health-checking = "==1.60.0"
grpcio = "==1.60.0"
opentelemetry-distro = "==0.43b0"
opentelemetry-exporter-otlp-proto-grpc = "==1.22.0"
python-dotenv = "==1.0.0"
python-json-logger = "==2.0.7"
openfeature-sdk = "==0.5.0"
openfeature-provider-flagd = "==0.1.3"
psutil = "==5.9.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
